<resources>
    <string name="app_name">GMS</string>

    <string name="id">아이디(이메일)</string>
    <string name="password">비밀번호</string>
    <string name="login">로그인</string>
    <string name="sign">회원가입</string>
    <string name="setPassword">비밀번호 설정</string>
    <string name="pastPassword">이전 비밀번호</string>
    <string name="resetPassword">비밀번호 재설정</string>
    <string name="checkPassword">비밀번호 확인</string>
    <string name="sendNumber">인증번호 발송</string>
    <string name="email">이메일 인증</string>
    <string name="loginEng">LOGIN</string>
    <string name="signEng">SIGN</string>
    <string name="search">검색하기</string>
    <string name="category">ㆍ&#160;Category</string>
    <string name="location">ㆍ&#160;location</string>
    <string name="koreanFood">한&#160;식</string>
    <string name="chineseFood">중&#160;식</string>
    <string name="westernFood">양&#160;식</string>
    <string name="japaneseFood">일&#160;식</string>
    <string name="seoul">서울</string>
    <string name="busan">부산</string>
    <string name="yeosuSuncheon">여수/순천</string>
    <string name="seongnam">성남</string>
    <string name="incheon">인천</string>
    <string name="daegu">대구</string>
    <string name="mokpoNaju">목포/나주</string>
    <string name="jeonju">전주</string>
    <string name="gwangju">광주</string>
    <string name="ulsan">울산</string>
    <string name="suwonHwaseong">수원/화성</string>
    <string name="jeju">제주</string>
    <string name="todayRestaurant">오늘의&#160;맛집</string>
    <string name="logout">LOG&#160;OUT</string>
    <string name="gmsText">G&#160;&#160;M&#160;&#160;S</string>
    <string name="gmsText2">For&#160;&#160;a&#160;&#160;more&#160;&#160;delicious&#160;&#160;world</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="classNumber">학번</string>
    <string name="name">이름</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="restaurantName">이름</string>
    <string name="restaurantAddress">주소</string>
    <string name="restaurantPhoneNumber">전화번호</string>

</resources>