<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="140dp"
        android:layout_height="5dp"
        android:background="@color/black"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray2"
        android:layout_marginTop="20dp"
        android:padding="10dp">

        <ImageView
            android:id="@+id/restaurantImage"
            android:layout_width="125dp"
            android:layout_height="100dp"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/restaurantName"
            android:layout_width="200dp"
            android:layout_height="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:text="@string/restaurantName"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/restaurantImage"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/restaurantAddress"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:gravity="top|left"
            android:text="@string/restaurantAddress"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/restaurantImage"
            app:layout_constraintTop_toBottomOf="@id/restaurantName" />

        <TextView
            android:id="@+id/restaurantPhoneNumber"
            android:layout_width="200dp"
            android:layout_height="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:text="@string/restaurantPhoneNumber"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/restaurantImage"
            app:layout_constraintTop_toBottomOf="@+id/restaurantAddress" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.appcompat.widget.LinearLayoutCompat>