<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <!-- loginLogo -->
    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/gms_logo"
        app:layout_constraintStart_toStartOf="@id/loginLogoGuideLeft"
        app:layout_constraintEnd_toEndOf="@id/loginLogoGuideRight"
        app:layout_constraintTop_toTopOf="@id/loginLogoGuideTop"
        app:layout_constraintBottom_toTopOf="@id/gmsText"/>

    <TextView
        android:id="@+id/gmsText"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:text="@string/gmsText"
        android:gravity="center"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/loginLogoGuideLeft"
        app:layout_constraintEnd_toEndOf="@id/loginLogoGuideRight"
        app:layout_constraintTop_toBottomOf="@id/loginLogo"
        app:layout_constraintBottom_toBottomOf="@id/gmsText2"/>

    <TextView
        android:id="@+id/gmsText2"
        android:layout_width="0dp"
        android:layout_height="15dp"
        android:text="@string/gmsText2"
        android:gravity="center"
        android:textSize="10dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/loginLogoGuideLeft"
        app:layout_constraintEnd_toEndOf="@id/loginLogoGuideRight"
        app:layout_constraintTop_toBottomOf="@id/gmsText"
        app:layout_constraintBottom_toBottomOf="@id/loginLogoGuideBottom"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginLogoGuideLeft"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.34" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginLogoGuideRight"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.664" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginLogoGuideTop"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.14" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginLogoGuideBottom"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.315" />

    <!-- idEditText -->
    <EditText
        android:id="@+id/idEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/edittext_box"
        android:hint="@string/id"
        android:paddingStart="20dp"
        android:textColorHint="@color/gray"
        app:layout_constraintBottom_toBottomOf="@id/idEditTextGuideBottom"
        app:layout_constraintEnd_toEndOf="@id/idEditTextGuideRight"
        app:layout_constraintStart_toStartOf="@id/idEditTextGuideLeft"
        app:layout_constraintTop_toBottomOf="@id/idEditTextGuideTop" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/idEditTextGuideLeft"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/idEditTextGuideRight"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/idEditTextGuideTop"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/idEditTextGuideBottom"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.475" />

    <!-- passwordEditText -->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/edittext_box"
        android:hint="@string/password"
        android:paddingStart="20dp"
        android:textColorHint="@color/gray"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@id/passwordEditTextGuideBottom"
        app:layout_constraintEnd_toEndOf="@id/passwordEditTextGuideRight"
        app:layout_constraintStart_toStartOf="@id/passwordEditTextGuideLeft"
        app:layout_constraintTop_toBottomOf="@id/passwordEditTextGuideTop" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/passwordEditTextGuideLeft"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/passwordEditTextGuideRight"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/passwordEditTextGuideTop"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/passwordEditTextGuideBottom"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.575" />

    <!-- loginBtn -->
    <Button
        android:id="@+id/loginBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/black_background"
        android:text="@string/login"
        android:textColor="@color/gray2"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@id/loginBtnGuideBottom"
        app:layout_constraintEnd_toEndOf="@id/loginBtnGuideRight"
        app:layout_constraintStart_toStartOf="@id/loginBtnGuideLeft"
        app:layout_constraintTop_toBottomOf="@id/loginBtnGuideTop" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginBtnGuideLeft"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginBtnGuideRight"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginBtnGuideTop"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.605" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginBtnGuideBottom"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.67" />

    <!-- resetPasswordBtn -->
    <Button
        android:id="@+id/resetPasswordBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/gray_background"
        android:text="@string/resetPassword"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="@id/resetPasswordBtnGuideBottom"
        app:layout_constraintEnd_toEndOf="@id/resetPasswordBtnGuideRight"
        app:layout_constraintStart_toStartOf="@id/resetPasswordBtnGuideLeft"
        app:layout_constraintTop_toBottomOf="@id/resetPasswordBtnGuideTop" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/resetPasswordBtnGuideLeft"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.315" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/resetPasswordBtnGuideRight"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.685" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/resetPasswordBtnGuideTop"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.68" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/resetPasswordBtnGuideBottom"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.707" />

</androidx.constraintlayout.widget.ConstraintLayout>