<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SignUpFragment1">

    <!-- signLogo -->
    <ImageView
        android:id="@+id/signLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/gms_logo"
        app:layout_constraintStart_toStartOf="@id/signLogoGuideLeft"
        app:layout_constraintEnd_toEndOf="@id/signLogoGuideRight"
        app:layout_constraintTop_toTopOf="@id/signLogoGuideTop"
        app:layout_constraintBottom_toTopOf="@id/gmsText"/>

    <TextView
        android:id="@+id/gmsText"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:text="@string/gmsText"
        android:gravity="center"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/signLogoGuideLeft"
        app:layout_constraintEnd_toEndOf="@id/signLogoGuideRight"
        app:layout_constraintTop_toBottomOf="@id/signLogo"
        app:layout_constraintBottom_toBottomOf="@id/gmsText2"/>

    <TextView
        android:id="@+id/gmsText2"
        android:layout_width="0dp"
        android:layout_height="15dp"
        android:text="@string/gmsText2"
        android:gravity="center"
        android:textSize="10dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/signLogoGuideLeft"
        app:layout_constraintEnd_toEndOf="@id/signLogoGuideRight"
        app:layout_constraintTop_toBottomOf="@id/gmsText"
        app:layout_constraintBottom_toBottomOf="@id/signLogoGuideBottom"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signLogoGuideLeft"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.34" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signLogoGuideRight"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.664" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signLogoGuideTop"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.14" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signLogoGuideBottom"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.315" />

    <!-- signIdEditText -->
    <EditText
        android:id="@+id/signIdEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/edittext_box"
        android:hint="@string/id"
        android:paddingStart="20dp"
        android:textColorHint="@color/gray"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@id/signIdEditTextGuideBottom"
        app:layout_constraintEnd_toEndOf="@id/signIdEditTextGuideRight"
        app:layout_constraintStart_toStartOf="@id/signIdEditTextGuideLeft"
        app:layout_constraintTop_toBottomOf="@id/signIdEditTextGuideTop" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signIdEditTextGuideLeft"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signIdEditTextGuideRight"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signIdEditTextGuideTop"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.41" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signIdEditTextGuideBottom"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.485" />

    <!-- signEmailEditText -->
    <EditText
        android:id="@+id/signEmailEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/edittext_box"
        android:hint="@string/email"
        android:paddingStart="20dp"
        android:textColorHint="@color/gray"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@id/signEmailEditTextGuideBottom"
        app:layout_constraintEnd_toEndOf="@id/signEmailEditTextGuideRight"
        app:layout_constraintStart_toStartOf="@id/signEmailEditTextGuideLeft"
        app:layout_constraintTop_toBottomOf="@id/signEmailEditTextGuideTop" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signEmailEditTextGuideLeft"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signEmailEditTextGuideRight"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signEmailEditTextGuideTop"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.515" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signEmailEditTextGuideBottom"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.585" />

    <!-- signSentNumberBtn -->
    <Button
        android:id="@+id/signSentNumberBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/black_background"
        android:text="@string/sendNumber"
        android:textColor="@color/gray2"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="@id/signSentNumberBtnGuideBottom"
        app:layout_constraintEnd_toEndOf="@id/signSentNumberBtnGuideRight"
        app:layout_constraintStart_toStartOf="@id/signSentNumberBtnGuideLeft"
        app:layout_constraintTop_toBottomOf="@id/signSentNumberBtnGuideTop" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signSentNumberBtnGuideLeft"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.68" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signSentNumberBtnGuideRight"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.93" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signSentNumberBtnGuideTop"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.534" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signSentNumberBtnGuideBottom"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.57" />

    <!-- signBtn -->
    <Button
        android:id="@+id/emailBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/black_background"
        android:text="@string/sign"
        android:textColor="@color/gray2"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@id/signBtnGuideBottom"
        app:layout_constraintEnd_toEndOf="@id/signBtnGuideRight"
        app:layout_constraintStart_toStartOf="@id/signBtnGuideLeft"
        app:layout_constraintTop_toBottomOf="@id/signBtnGuideTop" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signBtnGuideLeft"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signBtnGuideRight"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signBtnGuideTop"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.833" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signBtnGuideBottom"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.898" />

</androidx.constraintlayout.widget.ConstraintLayout>